add download images from url

--- a/__fixtures__/after.html
+++ b/__fixtures__/after.html
@@ -6,9 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img1.png" alt="img1">
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img2.jpg" alt="img2">
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img3.svg" alt="img3">
+  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img1.png" alt="img1" />
+  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img2.jpg" alt="img2" />
+  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img3.svg" alt="img3" />
 </body>
 </html>
 
