--- a/__fixtures__/before.html
+++ b/__fixtures__/before.html
@@ -6,8 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="/assets/profession/img1.png" alt="img1">
-  <img src="/assets/profession/img2.jpg" alt="img2">
-  <img src="/assets/profession/img3.svg" alt="img3">
+  <img src="/assets/profession/img1.png" alt="img1" />
+  <img src="/assets/profession/img2.jpg" alt="img2" />
+  <img src="/assets/profession/img3.svg" alt="img3" />
 </body>
 </html>
