add logic and test for downloads images

--- a/__fixtures__/after.html
+++ b/__fixtures__/after.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img1.png" alt="img1" />
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img2.jpg" alt="img2" />
-  <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-img3.svg" alt="img3" />
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <img
+      src="ru-hexlet-io--courses_files/ru-hexlet-io-courses-assets-professions-img1.png"
+      alt="img1"
+    />
+    <img
+      src="ru-hexlet-io--courses_files/ru-hexlet-io-courses-assets-professions-img2.jpg"
+      alt="img2"
+    />
+  </body>
 </html>
-
