--- a/__fixtures__/before.html
+++ b/__fixtures__/before.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <img src="/assets/profession/img1.png" alt="img1" />
-  <img src="/assets/profession/img2.jpg" alt="img2" />
-  <img src="/assets/profession/img3.svg" alt="img3" />
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <img src="/assets/professions/img1.png" alt="img1" />
+    <img src="/assets/professions/img2.jpg" alt="img2" />
+  </body>
 </html>
